--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'"
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -34,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.13.0",
     "jsdom": "^25.0.1",
+    "lint-staged": "^15.2.10",
     "msw": "^2.6.6",
     "prettier": "^3.4.2",
     "typescript": "~5.6.2",
