fix(frontend): update development environment setup
- Update Tailwind configuration to use @tailwindcss/postcss
- Remove MSW in favor of axios-mock-adapter for MVP testing
- Clean up package.json dependencies
- Fix development server configuration

Testing approach simplified to focus on MVP requirements using
axios-mock-adapter instead of MSW for API mocking.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ migrations/*.py
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Local Files
+ .local_user_files/
+
+# windsurf rules
+.windsurfrules
