--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
-    "lint-staged": "lint-staged"
+    "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
