--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/leaflet": "1.9.16",
+    "@types/node": "^22.13.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@typescript-eslint/eslint-plugin": "latest",
