--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,30 @@
-version: '3.8'
-
+# Docker Compose V2 configuration
 services:
-  db:
-    image: postgres:17.4
-    environment:
-      - POSTGRES_DB=hellobirdie
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./backend:/app/backend
+      - ./backend:/app
     ports:
       - "8000:8000"
+    environment:
+      - DJANGO_ENV=development
+      - DJANGO_SETTINGS_MODULE=hellobirdie.settings.local
+      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/hellobirdie
     depends_on:
       - db
+
+  db:
+    image: postgres:17.4
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     environment:
-      - DJANGO_SETTINGS_MODULE=hellobirdie.settings.local
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/hellobirdie
-    command: python manage.py runserver 0.0.0.0:8000
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=hellobirdie
+    ports:
+      - "5433:5432" # Using port 5433 on host to avoid conflicts with local PostgreSQL
 
 volumes:
   postgres_data:
