refactor: align environment configuration with documentation standards
- Update docker-compose.yml to use backend/.env file
- Improve database configuration in settings/local.py
- Properly handle IN_DOCKER environment variable
- Add support for both DATABASE_URL and individual parameters
- Standardize health check endpoint naming to health-check

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ media/
 .venv/
 venv/
 ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Environment variables
+.env
+backend/.env
+.env.sample
+backend/.env.sample
